--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var ctx = c.getContext("2d");
 c.height = Math.min(window.innerHeight,900);
 c.width = window.innerWidth;
 
-colours = ['#FFFF0A', ' #FFAF0A']//,'#F00', '#FF0', '#00F', '#F0F', '#0FF']
+colours = ['#F0A', ' #AF0A']//,'#F00', '#FF0', '#00F', '#F0F', '#0FF']
 //chinese characters - taken from the unicode charset
 var chinese = "10/;!8#$%&*();]]ABCDEF123456790abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
 
