--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    left: 31%;
 	}
 </style>
-	<title>Hackerspace</title>
+	<title>Mysite</title>
 </head>
 <body>
 <canvas style="position:fixed;" id="c"></canvas>
@@ -32,7 +32,7 @@ var ctx = c.getContext("2d");
 //making the canvas full screen
 c.height = Math.min(window.innerHeight,900);
 c.width = window.innerWidth;
-colours = ['##FFFF00', '#FFA62F']//,'#F00', '#FF0', '#00F', '#F0F', '#0FF']
+colours = ['#FFFF00', '#FFA62F']//,'#F00', '#FF0', '#00F', '#F0F', '#0FF']
 //chinese characters - taken from the unicode charset
 var chinese = "10/;!8#$%&*();]]ABCDEF123456790abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
 	grid=[
